# aoc

2022/: Cargo.toml
2022/day1/: Cargo.toml
2022/day1/src/: main.rs
2022/day2/: Cargo.toml
2022/day2/src/: main.rs
2022/day3/: Cargo.toml
2022/day3/src/: main.rs
